# SintefDigital_boardGame_server

./: .gitignore  APIdoc.yaml  Cargo.toml  README.md  SintefDigital_boardGame_server.sln  board_game_accesser  board_game_accesser.pub
.github/ISSUE_TEMPLATE/: feature-request.md  issue-template.md
.github/workflows/: rust.yml
Communication/: Communication.csproj  GameView.cs  InternetMultiplayerController.cs  PlayerInput.cs
Core/: Core.csproj  GameController.cs  GameState.cs  GameStateInfo.cs  ILocker.cs  IMultiplayerPlayerInputController.cs  IMultiplayerViewController.cs  IRuleChecker.cs  Input.cs  Node.cs  NodeInfo.cs  NodeMap.cs  Player.cs  PlayerInfo.cs  PlayerInputType.cs  WantedLobbyInfo.cs
Helpers/: Dijkstra.cs  Graph.cs  GraphDeserializer.cs  Helpers.csproj  Settings.cs
Logging/: ILogger.cs  LogLevel.cs  ThresholdLogger.cs
MainProgram/: APIController.cs  MainProgram.csproj  Program.cs  Startup.cs
Rules/: Rule.cs  RuleController.cs  RuleHelper.cs
SintefDigital_boardGame_server/: SintefDigital_boardGame_server.csproj
SintefDigital_boardGame_server.Tests/: Program.cs  SintefDigital_boardGame_server.Tests.csproj  Tests.csproj
SintefDigital_boardGame_server.Tests/Core/: GameControllerTest.cs  GameStateTest.cs
SintefDigital_boardGame_server/Communication/: GameView.cs  InternetMultiplayerController.cs  PlayerInput.cs
SintefDigital_boardGame_server/Core/: GameController.cs  GameState.cs  ILocker.cs  IMultiplayerGameController.cs  IMultiplayerPlayerInputController.cs  Input.cs  (+10 more)
Tests/: Tests.csproj
game_core/: Cargo.toml
integration_tests/: Cargo.toml
logging/: Cargo.toml
src/: main.rs  test.rs
(+53 files in other folders)
