[package]
name = "sintefdigital_boardgame_server_rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.68.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "game_core",
    "helpers",
    "logging",
    "rules",
]

[dependencies]
game_core = {path = "game_core"}
logging = {path = "logging"}
rules = {path = "rules"}
actix-web = "4.3.1"
actix-cors = "0.6.4"
serde = "1.0.152"
serde_json = "1.0.93"
parameterized = "1.0.1"
lazy_static = "1.4.0"